Fixed nav item alignment

--- a/public/app/index.css
+++ b/public/app/index.css
@@ -237,6 +237,7 @@ body {
         border-radius: 24px;
     }
     #navbar > .nav-item {
+        justify-content: flex-start;
         flex: 0;
     }
     #navbar > .nav-item > .nav-text {
